--- a/WineTruth/main/Makefile
+++ b/WineTruth/main/Makefile
@@ -2,7 +2,7 @@ install:
 	pip install -r deps
 
 run:
-	~/google_appengine/dev_appserver.py . --host=0.0.0.0 
+	~/google_appengine/dev_appserver.py . --host=0.0.0.0 --admin_host=0.0.0.0
 
 runclean:
 	~/google_appengine/dev_appserver.py . --host=0.0.0.0 --clear_datastore=yes
