--- a/WineCellar/0.0/server/app.yaml
+++ b/WineCellar/0.0/server/app.yaml
@@ -9,6 +9,9 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /WineCellar
+  static_dir: static/production/WineCellar
+
 - url: .*
   script: main.app
 
