Added 'random_wine' and 'sample_wine' to the makefile. Thinking the makefile could maybe use some documentation.

--- a/WineTruth/main/Makefile
+++ b/WineTruth/main/Makefile
@@ -10,6 +10,14 @@ runclean:
 test:
 	python `which nosetests`
 
+random_wine:
+	echo "Make sure to turn on the server first!" 
+	python http_wine_load.py http://localhost:8080 random
+
+sample_wine:
+	echo "Make sure to turn on the server first!"
+	python http_wine_load.py http://localhost:8080 data/wine_sample.json 
+
 lint:
 	pep8
 
