--- a/WineCore/WineTruth/main/Makefile
+++ b/WineCore/WineTruth/main/Makefile
@@ -5,7 +5,7 @@ run:
 	~/google_appengine/dev_appserver.py . --host=0.0.0.0 --admin_host=0.0.0.0
 
 runclean:
-	~/google_appengine/dev_appserver.py . --host=0.0.0.0 --clear_datastore=yes
+	~/google_appengine/dev_appserver.py . --host=0.0.0.0 --admin_host=0.0.0.0 --clear_datastore=yes
 
 test:
 	python `which nosetests`
