Monster adjustment of WineTruth in order to merge apps

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /WineCore/WineCellar/PineSocks/ext
 /WineCore/WineCellar/PineSocks/server/static/temp
 /WineCore/WineCellar/PineSocks/server/static/production
+*.pyc
+*.idea
+*.vagrant
