--- a/WineCore/truth/Makefile
+++ b/WineCore/truth/Makefile
@@ -2,10 +2,10 @@ install:
 	pip install -r deps
 
 run:
-	~/google_appengine/dev_appserver.py . --host=0.0.0.0 --admin_host=0.0.0.0
+	~/google_appengine/dev_appserver.py ../ --host=0.0.0.0 --admin_host=0.0.0.0
 
 runclean:
-	~/google_appengine/dev_appserver.py . --host=0.0.0.0 --admin_host=0.0.0.0 --clear_datastore=yes
+	~/google_appengine/dev_appserver.py ../ --host=0.0.0.0 --admin_host=0.0.0.0 --clear_datastore=yes
 
 test:
 	python `which nosetests`
