--- a/WineCore/index.yaml
+++ b/WineCore/index.yaml
@@ -9,3 +9,36 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: Winery
+  properties:
+  - name: country
+  - name: location
+  - name: name
+  - name: verified
+
+- kind: Winery
+  properties:
+  - name: location
+  - name: name
+  - name: verified
+
+- kind: Winery
+  properties:
+  - name: location_fuzzy
+  - name: name
+  - name: verified
+
+- kind: Winery
+  properties:
+  - name: region
+  - name: location
+  - name: name
+  - name: verified
+
+- kind: Winery
+  properties:
+  - name: subregion
+  - name: location
+  - name: name
+  - name: verified
