added a deploy directive to the makefile

--- a/WineCore/truth/Makefile
+++ b/WineCore/truth/Makefile
@@ -1,6 +1,9 @@
 install:
 	pip install -r deps
 
+deploy:
+	~/google_appengine/appcfg.py update ../
+
 run:
 	~/google_appengine/dev_appserver.py ../ --host=0.0.0.0 --admin_host=0.0.0.0
 
