--- a/WineCore/app.yaml
+++ b/WineCore/app.yaml
@@ -9,7 +9,7 @@ env_variables:
   GOOGLE: True
 
 includes:
-- WineCellar/PineSocks/WineCellar.yaml
+- cellar/PineSocks/WineCellar.yaml
 
 handlers:
 - url: /favicon\.ico
@@ -26,15 +26,15 @@ handlers:
 #  script: main.app
 
 skip_files:
-- ^WineCellar/PineSocks/.sencha/*
-- ^WineCellar/PineSocks/app/*
-- ^WineCellar/PineSocks/ext/*
-- ^WineCellar/PineSocks/overrides/*
-- ^WineCellar/PineSocks/packages/*
-- ^WineCellar/PineSocks/sass/*
-- ^WineCellar/PineSocks/server/static/temp/*
-- ^WineTruth/chef/*
-- ^WineTruth/Vagrantfile
+- ^cellar/PineSocks/.sencha/*
+- ^cellar/PineSocks/app/*
+- ^cellar/PineSocks/ext/*
+- ^cellar/PineSocks/overrides/*
+- ^cellar/PineSocks/packages/*
+- ^cellar/PineSocks/sass/*
+- ^cellar/PineSocks/server/static/temp/*
+- ^chef/*
+- ^Vagrantfile
 
 
 
