Added wine themed bootstrap

--- a/WineCore/app.yaml
+++ b/WineCore/app.yaml
@@ -19,6 +19,9 @@ handlers:
 - url: /truth/.* 
   script: truth.main.application
 
+- url: /style
+  static_dir: style
+
 #- url: .*
 #  script: main.app
 
