Add: access to dev copy of PineSocks.

--- a/WineCore/cellar/PineSocks/WineCellar.yaml
+++ b/WineCore/cellar/PineSocks/WineCellar.yaml
@@ -5,3 +5,6 @@ handlers:
 
 - url: /cellar/
   static_dir: cellar/PineSocks/server/static/production/WineCellar/
+
+- url: /cellarDev/
+  static_dir: cellar/PineSocks/
