Feature: Inventory is now read from the server.

--- a/WineCore/cellar/PineSocks/WineCellar.yaml
+++ b/WineCore/cellar/PineSocks/WineCellar.yaml
@@ -1,10 +1,10 @@
 handlers:
-- url: /cellar/
-  static_files: cellar/PineSocks/server/static/production/WineCellar/index.html
-  upload: cellar/PineSocks/server/static/production/WineCellar/index.html
+# - url: /cellar/
+#   static_files: cellar/PineSocks/server/static/production/WineCellar/index.html
+#   upload: cellar/PineSocks/server/static/production/WineCellar/index.html
 
 - url: /cellar/
-  static_dir: cellar/PineSocks/server/static/production/WineCellar/
+  static_dir: cellar/PineSocks/
 
 - url: /cellarDev/
   static_dir: cellar/PineSocks/
