Fix: deploy parts needed for PineSocks launching in dev mode.
PineSocks is currently running in the dev mode of ExtJS. It loads each class
separately. Thus it needs the ext folder and a the app folder.

--- a/WineCore/app.yaml
+++ b/WineCore/app.yaml
@@ -28,8 +28,13 @@ handlers:
 
 skip_files:
 - ^cellar/PineSocks/.sencha/*
-- ^cellar/PineSocks/app/*
-- ^cellar/PineSocks/ext/*
+#- ^cellar/PineSocks/app/*
+#- ^cellar/PineSocks/ext/*
+- ^cellar/PineSocks/ext/.sencha/*
+- ^cellar/PineSocks/ext/builds/*
+- ^cellar/PineSocks/ext/docs/*
+- ^cellar/PineSocks/ext/examples/*
+- ^cellar/PineSocks/ext/welcome/*
 - ^cellar/PineSocks/overrides/*
 - ^cellar/PineSocks/packages/*
 - ^cellar/PineSocks/sass/*
