--- a/WineCore/Vagrantfile
+++ b/WineCore/Vagrantfile
@@ -10,11 +10,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # please see the online documentation at vagrantup.com.
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "precise32"
+  config.vm.box = "raring64"
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
-  config.vm.box_url = "http://files.vagrantup.com/precise32.box"
+  config.vm.box_url = "http://goo.gl/Y4aRr"
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
@@ -91,9 +91,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "apt" 
     chef.add_recipe "gae" 
     chef.add_recipe "heroic"
-    #chef.add_recipe "mongodb::default" 
     chef.add_recipe "java" 
-    chef.add_recipe "SenchaCmd" 
+    chef.add_recipe "SenchaCmd"
     #chef.json = {
     #  :java => {
     #    :install_flavor => 'openjdk',
