--- a/WineCore/Vagrantfile
+++ b/WineCore/Vagrantfile
@@ -89,12 +89,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.roles_path = "chef/roles"
     chef.data_bags_path = "chef/data_bags"
     chef.add_recipe "apt" 
+    chef.add_recipe "always_useful"
     chef.add_recipe "gae" 
-    chef.add_recipe "winebits"
     chef.add_recipe "java" 
     chef.add_recipe "SenchaCmd"
     chef.add_recipe "nodejs"
     chef.add_recipe "phonegap"
+    
+    chef.add_recipe "winebits"
     #chef.json = {
     #  :java => {
     #    :install_flavor => 'openjdk',
