Feature: update Inventory / Truth to use new server API.

--- a/WineCore/cellar/PineSocks/.sencha/app/sencha.cfg
+++ b/WineCore/cellar/PineSocks/.sencha/app/sencha.cfg
@@ -7,6 +7,9 @@ app.framework=ext
 # The path(s) to application javascript sources (comma separated)
 app.classpath=${app.dir}/app,${app.dir}/app.js
 
+# The path(s) to overrides javascript sources (comma separated)
+app.overrides=${app.dir}/overrides
+
 # Output location for application build artifacts
 app.build.dir=${workspace.build.dir}/${app.name}
 
