--- a/WineCore/cellar/PineSocks/.sencha/app/sencha.cfg
+++ b/WineCore/cellar/PineSocks/.sencha/app/sencha.cfg
@@ -15,7 +15,7 @@ app.build.dir=${workspace.build.dir}/${app.name}
 
 # The root namespace to use when mapping scss resources to js classes
 # in the sass/src and sass/var directories
-app.sass.namespace=WineCellar
+app.sass.namespace=
 
 # Path to sass rule definition files corresponding to JavaScript classes.
 app.sass.srcpath=${app.dir}/sass/src
@@ -50,4 +50,5 @@ app.resource.paths=${app.dir}/resources
 # conflicts with newer versions
 
 app.framework.version=4.2.1.883
-app.cmd.version=4.0.1.45
+
+app.cmd.version=4.0.2.67
