feature: able to deploy to the cloud.

--- a/WineCore/app.yaml
+++ b/WineCore/app.yaml
@@ -37,6 +37,21 @@ skip_files:
 - ^cellar/PineSocks/ext/docs/*
 - ^cellar/PineSocks/ext/examples/*
 - ^cellar/PineSocks/ext/welcome/*
+- ^cellar/PineSocks/ext/packages/ext-locale
+- ^cellar/PineSocks/ext/packages/ext-theme-access
+- ^cellar/PineSocks/ext/packages/ext-theme-base
+- ^cellar/PineSocks/ext/packages/ext-theme-classic
+- ^cellar/PineSocks/ext/packages/ext-theme-classic-sandbox
+- ^cellar/PineSocks/ext/packages/ext-theme-gray
+- ^cellar/PineSocks/ext/packages/ext-theme-neutral
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/.sencha
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/build
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/docs
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/licenses
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/overrides
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/resources
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/sass
+- ^cellar/PineSocks/ext/packages/ext-theme-neptune/src
 - ^cellar/PineSocks/overrides/*
 - ^cellar/PineSocks/packages/*
 - ^cellar/PineSocks/sass/*
